fixed review text overflow

--- a/frontend/src/components/Reviews/reviews.css
+++ b/frontend/src/components/Reviews/reviews.css
@@ -4,7 +4,7 @@
 }
 
 .review-id {
-    width: 20%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     border: 0.5px solid grey;
@@ -17,6 +17,10 @@
 
 .review-id>p {
     font-size: 1rem;
+}
+
+.all-reviews-div {
+    width: 40%
 }
 
 .review-text {
@@ -43,6 +47,11 @@
         background-color: #a1454c;
         color: white;
         cursor: pointer;
+}
+
+.review-text-browser {
+    word-wrap: break-word;
+    white-space: pre-line;
 }
 
 .fa-user{
